# chant

./: README.md  package.json  vite.config.ts
src/: App.tsx  bindings.ts  main.tsx  routeTree.gen.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/db/: mod.rs  queries.rs  test_helpers.rs
src/components/: CommandPalette.tsx  ContextMenu.tsx  LangPicker.tsx  TrackEditorPanel.tsx
src/components/__tests__/: StatusBar.test.tsx  Table.test.tsx  TrackEditorPanel.test.tsx
src/components/layout/: MenuBar.tsx  PlayerBar.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useCoverArt.ts
src/lib/: audio.ts  queryClient.ts  validators.ts
src/lib/metadata/: index.ts  itunes.ts  lrclib.ts  musicbrainz.ts  types.ts
src/routes/: __root.tsx  albums.tsx  albums_.$albumId.tsx  artists.tsx  artists_.$artistId.tsx  debug.tsx  index.tsx  metadata.tsx  settings.tsx  table.tsx
src/test/: mocks.ts  setup.ts
