[package]
name = "chant"
version = "0.1.0"
description = "Chant music library manager"
authors = ["qustrolabe"]
edition = "2021"

[profile.dev]
debug = 0 # speed up build
incremental = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chant_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Type-safe bindings
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
lofty = "0.22"
base64 = "0.22"
walkdir = "2"
fern = "0.7"

[dev-dependencies]
tempfile = "3"
